--- a/client/src/app/dashboard/user-dashboard/components/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/user-dashboard/components/dashboard/dashboard.component.html
@@ -1,1 +1,15 @@
-<p>dashboard works!</p>
+<div class="dashboard">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="display-4">Dashboard</h1>
+          <p class="lead text-muted">Welcome {{userName}}</p> <div style="margin-bottom: 60px;">
+            <app-dashboard-action></app-dashboard-action>
+            <button class="btn btn-danger">
+              Delete My Account
+            </button>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
